# xlw_exp

./: .gitignore  README.md  pyproject.toml  quickstart.md  run_experiment.py
configs/: default.yaml  resnet50.yaml  resnet50_enabled.yaml
core/: aggregator.py  edge_manager.py  loop.py  selector.py  trainer.py
data/: domainnet.py  partition.py
models/: resnet18_lora.py  resnet50_lora.py
scripts/: generate_index.py  manage_experiments.py  prepare_domainnet.sh  run_default.sh  visualize_drift.py  visualize_results.py
tests/: test_aggregator.py  test_calibration.py  test_edge_cases.py  test_edge_manager.py  test_experiment_logging.py  test_integration.py  test_model_factory.py  test_models.py  test_partition.py  test_selector.py  test_trainer.py
utils/: common.py  experiment.py  metrics.py  transforms.py
